--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: left;
 }
+.nav-ul li{
+  display: inline-block;
+  padding : 20px;
+  margin-top: -10%;
+  background-color: blue;  
+}
 
 .appButton {
   background-color:green;
@@ -32,6 +38,25 @@
 .image6{
   width: 400px;
   height: 267px;
+}
+
+.inputBox{
+  display: block;
+  margin-left: 500px;
+  margin-top: 25px;
+  padding: 10px;
+  width: 300px;
+  border: 1px solid skyblue;
+}
+.register{
+  text-align: center; 
+
+}
+.nav-right{
+  text-align: right;
+}
+.appButton1{
+margin-top: 50px;
 }
 
 .App-logo {
